CA/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noa-itay-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: noa-itay.ddns.net  # Your subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-service-name  # Replace with your service name
            port:
              number: 80  # Replace with your service port
  tls:
  - hosts:
    - noa-itay.ddns.net
    secretName: noa-itay-tls
